Mob version layuot

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Your Choice</title>
     <link rel="shortcut icon" href="/img/header/Logo.png" type="image/png">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 <body>
 
